# brand_compliance_data_pipeline

./: .env  README.md  main.py  pyproject.toml  requirements.txt
src/script/: index_documents.py
